--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ var input = {
     }
 };
 
-hello(input, function (error, callback) { ... });
+hello(input, function (error, result) { ... });
             </code></pre>      
         </section>
 
