--- a/index.html
+++ b/index.html
@@ -760,6 +760,16 @@ public class Startup {
         src="https://platform.twitter.com/widgets/tweet_button.html?url=http://bit.ly/1h92BO0&via=tjanczuk&text=Run Node.js and .NET in-process on Windows, Mac, and Linux with Edge.js&count=horizontal&hashtags=edgejs,nodejs,dotnet,mono"
         style="width:130px; height:20px; position: absolute; top: 20px; left: 20px; border: 0;"></iframe>
 
+<!-- Place this tag where you want the +1 button to render. -->
+<div class="g-plusone" data-size="medium" data-annotation="inline" data-width="130" data-href="http://tjanczuk.github.io/edge" style="width:130px; height:20px; position: absolute; top: 50px; left: 20px; border: 0;"></div>     
+
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/platform.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>     
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
