--- a/index.html
+++ b/index.html
@@ -761,7 +761,9 @@ public class Startup {
         style="width:130px; height:20px; position: absolute; top: 20px; left: 20px; border: 0;"></iframe>
 
 <!-- Place this tag where you want the +1 button to render. -->
-<div class="g-plusone" data-size="medium" data-annotation="inline" data-width="130" data-href="http://tjanczuk.github.io/edge" style="width:130px; height:20px; position: absolute; top: 50px; left: 20px; border: 0;"></div>     
+<div style="width:130px; height:20px; position: absolute; top: 50px; left: 20px; border: 0;">
+  <div class="g-plusone" data-size="medium" data-annotation="inline" data-width="130" data-href="http://tjanczuk.github.io/edge"></div>
+</div>
 
 <script type="text/javascript">
   (function() {
