--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@ public class Startup {
 <a href="https://github.com/tjanczuk/edge"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>    
 
 <iframe allowtransparency="true" frameborder="0" scrolling="no"
-        src="https://platform.twitter.com/widgets/tweet_button.html?url=http://bit.ly/1h92BO0&via=tjanczuk&text=Run Node.js and .NET in-process on Windows, Mac, and Linux with Edge.js&count=horizontal&hashtags=edgejs,nodejs,dotnet,mono"
+        src="https://platform.twitter.com/widgets/tweet_button.html?url=http://tjanczuk.github.io/edge&via=tjanczuk&text=Run Node.js and .NET in-process on Windows, Mac, and Linux with Edge.js&count=horizontal&hashtags=edgejs,nodejs,dotnet,mono"
         style="width:130px; height:20px; position: absolute; top: 20px; left: 20px; border: 0;"></iframe>
 
 <!-- Place this tag where you want the +1 button to render. -->
