add follow button

--- a/index.html
+++ b/index.html
@@ -778,6 +778,11 @@ public class Startup {
   <div class="fb-share-button" data-href="http://tjanczuk.github.io/edge" data-width="130" data-type="button_count"></div>
 </div>
 
+<div style="width:130px; height:20px; position: absolute; top: 130px; left: 20px; border: 0;">
+  <a href="https://twitter.com/tjanczuk" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @tjanczuk</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>  
+</div>
+
 <script type="text/javascript">
   (function() {
     var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
