--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Node.js v0.10.28 welcomes .NET
         <section>
             <h2>Edge.js connects</h2>
             <p><small>Node.js and .NET ecosystems</small></p>
-            <p><small>JavaScript with C#, F#, Python, and PowerShell</small></p>
+            <p><small>JavaScript with C#, F#, Python, Lisp, and PowerShell</small></p>
             <p><small>loose typing with strong typing</small></p>
             <p><small>IO-bound single threaded with CPU-bound multi-threaded</small></p>
             <p><small>cool with awesome</small></p>
@@ -277,6 +277,29 @@ c:\projects\edgedemo> node sample.js
 PowerShell welcomes Node.js
           </code></pre>                  
         </section>          
+
+        <section>
+          <h2>Lisp welcomes Node.js</h2>
+          <p><small>Call Lisp from Node.js</small></p>
+          <pre><code>
+var edge = require('edge');
+
+var factorial = edge.func('lsharp', function () {/*
+  (def fact(n) 
+      (if (is n 0) 1 (* n (fact (- n 1)))))
+*/});
+
+factorial([5], function (error, result) {
+    if (error) throw error;
+    console.log(result);
+});
+          </code></pre>     
+          <small><a href="https://github.com/richorama/edge-lsharp">edge-lsharp</a> extension by <a href="https://twitter.com/richorama">@richorama</a></small>
+          <pre><code>
+c:\projects\edgedemo> node sample.js
+120
+          </code></pre>                  
+        </section>  
 
                       <section>
           <h2>FOO welcomes Node.js</h2>
