Fixes an "intput" typo

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ var accessSql = edge.func(function () {/*
 
     using System.Data;
     
-    async (intput) => {
+    async (input) => {
         ...
     }
 */});
